clusters/production/flux-system/allow-scraping.network-policy.patch.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scraping
  namespace: flux-system
