clusters/production/flux-system/allow-webhooks.network-policy.patch.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks
  namespace: flux-system
